[gd_scene load_steps=16 format=2]

[ext_resource path="res://InventoryLogic/ItemNameBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Stove/item_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Player/Player/UserInterface/Stove/Page1.gd" type="Script" id=3]
[ext_resource path="res://Assets/Themes/UI_Title.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Images/Inventory UI/Workbench/workbench menu.png" type="Texture" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/Workbench/Workbench.gd" type="Script" id=6]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=9]
[ext_resource path="res://World/Player/Player/UserInterface/Stove/staff_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://InventoryLogic/CraftingItemDescription.tscn" type="PackedScene" id=21]
[ext_resource path="res://Assets/Images/Misc/Buttons/down button.png" type="Texture" id=22]
[ext_resource path="res://Assets/Images/Misc/Buttons/up button.png" type="Texture" id=33]
[ext_resource path="res://Assets/Images/Misc/Buttons/exit button.png" type="Texture" id=36]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=37]

[node name="Workbench" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 6 )

[node name="ItemNameBox" parent="." instance=ExtResource( 1 )]
visible = false

[node name="BackgroundButton" type="Button" parent="."]
margin_left = -571.0
margin_top = -382.0
margin_right = 639.0
margin_bottom = 398.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="CraftingItemDescription" parent="." instance=ExtResource( 21 )]
visible = false
scale = Vector2( 2.7, 2.7 )

[node name="ItemDescription" parent="." instance=ExtResource( 37 )]
visible = false

[node name="Bg" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -274.0
margin_right = 317.0
margin_bottom = 274.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="InventorySlots" parent="." instance=ExtResource( 7 )]
margin_left = -283.0
margin_top = 128.0
margin_right = 284.0
margin_bottom = 182.0

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 8 )]
margin_left = -283.0
margin_top = 68.0
margin_right = 284.0
margin_bottom = 122.0

[node name="Title" type="Label" parent="."]
margin_left = -283.0
margin_top = -249.0
margin_right = 502.0
margin_bottom = -108.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "Workbench:"
clip_text = true

[node name="Page1" type="GridContainer" parent="."]
visible = false
margin_left = -271.0
margin_top = -187.0
margin_right = -139.0
margin_bottom = -135.0
rect_scale = Vector2( 4, 4 )
custom_constants/vseparation = 2
custom_constants/hseparation = 22
columns = 4
script = ExtResource( 3 )

[node name="stone axe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0

[node name="bronze axe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_right = 54.0
margin_bottom = 16.0

[node name="iron axe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 92.0
margin_bottom = 16.0

[node name="gold axe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_right = 130.0
margin_bottom = 16.0

[node name="stone pickaxe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 16.0
margin_bottom = 34.0

[node name="bronze pickaxe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 18.0
margin_right = 54.0
margin_bottom = 34.0

[node name="iron pickaxe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 18.0
margin_right = 92.0
margin_bottom = 34.0

[node name="gold pickaxe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 18.0
margin_right = 130.0
margin_bottom = 34.0

[node name="stone hoe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 16.0
margin_bottom = 52.0

[node name="bronze hoe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_top = 36.0
margin_right = 54.0
margin_bottom = 52.0

[node name="iron hoe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 36.0
margin_right = 92.0
margin_bottom = 52.0

[node name="gold hoe" parent="Page1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 114.0
margin_top = 36.0
margin_right = 130.0
margin_bottom = 52.0

[node name="Page2" type="GridContainer" parent="."]
visible = false
margin_left = -271.0
margin_top = -187.0
margin_right = -139.0
margin_bottom = -135.0
rect_scale = Vector2( 4, 4 )
custom_constants/vseparation = 2
custom_constants/hseparation = 22
columns = 4
script = ExtResource( 3 )

[node name="stone sword" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 44.0
margin_bottom = 16.0

[node name="bronze sword" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_right = 72.0
margin_bottom = 16.0

[node name="iron sword" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_right = 100.0
margin_bottom = 16.0

[node name="gold sword" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_right = 128.0
margin_bottom = 16.0

[node name="stone watering can" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 16.0
margin_bottom = 34.0

[node name="bronze watering can" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = 18.0
margin_right = 44.0
margin_bottom = 34.0

[node name="gold watering can" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 18.0
margin_right = 72.0
margin_bottom = 34.0

[node name="wood fishing rod" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 34.0

[node name="stone fishing rod" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 112.0
margin_top = 18.0
margin_right = 128.0
margin_bottom = 34.0

[node name="gold fishing rod" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 16.0
margin_bottom = 52.0

[node name="scythe" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_top = 36.0
margin_right = 44.0
margin_bottom = 52.0

[node name="bow" parent="Page2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_top = 36.0
margin_right = 72.0
margin_bottom = 52.0

[node name="Page3" type="GridContainer" parent="."]
margin_left = -271.0
margin_top = -187.0
margin_right = -139.0
margin_bottom = -135.0
rect_scale = Vector2( 4, 4 )
custom_constants/vseparation = 2
custom_constants/hseparation = 22
columns = 4
script = ExtResource( 3 )

[node name="arrow" parent="Page3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 16.0
margin_bottom = 16.0

[node name="wind staff" parent="Page3" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_right = 54.0
margin_bottom = 16.0

[node name="fire staff" parent="Page3" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 92.0
margin_bottom = 16.0

[node name="DownButton" type="TextureButton" parent="."]
margin_left = 261.0
margin_top = -11.0
margin_right = 301.0
margin_bottom = 31.0
texture_normal = ExtResource( 22 )

[node name="UpButton" type="TextureButton" parent="."]
margin_left = 261.0
margin_top = -249.0
margin_right = 301.0
margin_bottom = -207.0
texture_normal = ExtResource( 33 )

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Trash" parent="." instance=ExtResource( 9 )]
margin_left = -512.0
margin_top = -300.0
margin_right = -512.0
margin_bottom = -300.0

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = -274.0
margin_right = 392.0
margin_bottom = -202.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 36 )

[connection signal="pressed" from="BackgroundButton" to="." method="_on_BackgroundButton_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
